Label di dettaglio per IT-430 cambiato da nascosto a visualizzato

--- a/Prevu.Synoptics.V6815_Enviroo/Pages/P430.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Pages/P430.xaml
@@ -216,7 +216,7 @@
         <Labels:JumpLabel JumpFromLabel="456-01-MA1" JumpToLabel="460-01-MA1" Canvas.Left="1419" Canvas.Top="111" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="430-01-MA1" JumpToLabel="380-01-MA1" Canvas.Left="17" Canvas.Top="93" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="430-41-LT1" Canvas.Left="335" Canvas.Top="188" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DetailsLabel ComponentName="430-VIEW" DetailsPageName="D430" HideComponentName="True" Canvas.Left="437" Canvas.Top="65" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="430-SEP" DetailsPageName="D430" Canvas.Left="437" Canvas.Top="65" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="430-PADDLES" Canvas.Left="335" Canvas.Top="65" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="453-01-MA1" Canvas.Left="194" Canvas.Top="695" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="450-21-CV1" Canvas.Left="157" Canvas.Top="557" HorizontalAlignment="Center" VerticalAlignment="Top"/>
