V6815: Some fix on P100, P170, P288, Plantview and waterview

--- a/Prevu.Synoptics.V6815_Enviroo/Pages/P100.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Pages/P100.xaml
@@ -9,16 +9,16 @@
              x:Class="Prevu.Synoptics.P100" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="409" Color="Water" StatusComponent="109-01-MA1" Canvas.Left="407" Canvas.Top="678" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="254" RenderTransformOrigin="0.5,0.5" StatusComponent="103-01-MA1" Canvas.Left="703" Canvas.Top="541" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="409" Color="Water" StatusComponent="109-01-MA1" Canvas.Left="370" Canvas.Top="667" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="206" RenderTransformOrigin="0.5,0.5" StatusComponent="103-01-MA1" Canvas.Left="690" Canvas.Top="554" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="189" Color="Water" StatusComponent="104-01-MA1" Canvas.Left="619" Canvas.Top="348"/>
-        <Labels:Pipe Color="Water" Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="104-01-MA1" Canvas.Left="768" Canvas.Top="384" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="109" Color="Water" StatusComponent="104-01-MA1" Canvas.Left="619" Canvas.Top="348"/>
+        <Labels:Pipe Color="Water" Width="84" RenderTransformOrigin="0.5,0.5" StatusComponent="104-01-MA1" Canvas.Left="684" Canvas.Top="388" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -34,9 +34,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="80" StatusComponent="127-01-MA1" Canvas.Left="1300" Canvas.Top="599" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct"/>
-        <Labels:Pipe Width="59" StatusComponent="106-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1017" Canvas.Top="563" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="162" StatusComponent="098-01-MA1" PipeHeight="Medium" Canvas.Left="365" Canvas.Top="84" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="168" StatusComponent="103-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="811" Canvas.Top="475" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="140" StatusComponent="103-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="798" Canvas.Top="490" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -120,7 +119,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="118" StatusComponent="297-01-MA1" Canvas.Left="218" Canvas.Top="499"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="48" StatusComponent="106-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1050" Canvas.Top="585">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="48" StatusComponent="106-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1000" Canvas.Top="587">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -166,7 +165,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:EXC_HeatExchanger RenderTransformOrigin="0.5,0.5" Width="50" Height="50" Canvas.Left="35" Canvas.Top="572" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:EXC_HeatExchanger RenderTransformOrigin="0.5,0.5" Width="50" Height="50" Canvas.Left="35" Canvas.Top="576" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:EXC_HeatExchanger.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -174,7 +173,7 @@
             </Machines:EXC_HeatExchanger.RenderTransform>
         </Machines:EXC_HeatExchanger>
         <Rectangle HorizontalAlignment="Left" Height="28" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="1054" Canvas.Top="123"/>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="117" Canvas.Top="719">
+        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Top" Height="45" Width="45" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="109" Canvas.Top="720">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -186,7 +185,7 @@
         <Machines:V01_VT_CMM_Blower_Air_Compressor Height="44" Canvas.Left="1101" Canvas.Top="114" Width="44" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VRC_WaterTank Canvas.Left="212" Canvas.Top="632" Height="132" Width="244" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="115-41-LT1" TrendName="LEVEL"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Height="44" Canvas.Left="1293" Canvas.Top="114" Width="44" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Machines:CV_Valve_001 Height="48" Width="47" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="556" Canvas.Top="566" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Machines:CV_Valve_001 Height="48" Width="46" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="554" Canvas.Top="566" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Machines:CV_Valve RenderTransformOrigin="0.5,0.5" Height="38" Width="48" Canvas.Left="343" Canvas.Top="421" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
@@ -205,10 +204,10 @@
         <Machines:V01_WCE_Centrifuge Canvas.Left="501" Canvas.Top="66" Height="177" Width="198" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_SAB_DiskSeparator Canvas.Left="1061" Canvas.Top="249" Height="183" Width="257" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VB_VibratingScreen Canvas.Left="527" Canvas.Top="319" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="872" Canvas.Top="556" Width="162" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Waste Height="46" Width="44" Canvas.Left="1052" Canvas.Top="589" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="849" Canvas.Top="556" Width="185" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:Waste Height="46" Width="44" Canvas.Left="1002" Canvas.Top="591" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="1356" Canvas.Top="625" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:WaterPump Height="46" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="807" Canvas.Top="658" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Machines:WaterPump Height="46" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="770" Canvas.Top="647" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -216,7 +215,6 @@
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
         <Machines:NT_ConveyorBelt Height="1" Width="134" Canvas.Left="1295" Canvas.Top="474" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_SCW_Screw_wHopper Canvas.Left="779" Canvas.Top="356" Width="128" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Radar Height="36" Width="30" Canvas.Left="529" Canvas.Top="46" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="34" Stroke="Black" Width="2" Canvas.Left="623" Canvas.Top="744" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="2" Stroke="Black" Width="32" Canvas.Left="65" Canvas.Top="674" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -226,18 +224,18 @@
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="52" Canvas.Top="667" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="464" Canvas.Top="582" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_Agitator Canvas.Left="239" Canvas.Top="699" Height="22" Width="52" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="126-01-MA1" JumpToLabel="129-01-MA1" Canvas.Left="1450" Canvas.Top="448" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="126-01-MA1" JumpToLabel="129-01-MA1" Canvas.Left="1450" Canvas.Top="448" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="100-01-MA1" JumpToLabel="098-01-MA1" Canvas.Left="312" Canvas.Top="55"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="115-41-LT1" JumpToLabel="297-01-MA1" Canvas.Left="142" Canvas.Top="467"/>
-        <Labels:DetailsLabel ComponentName="107-HEAT" DetailsPageName="D107" Canvas.Left="98" Canvas.Top="573" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="110-21-CV1" Canvas.Left="534" Canvas.Top="516" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="107-HEAT" DetailsPageName="D107" Canvas.Left="106" Canvas.Top="576" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="110-21-CV1" Canvas.Left="532" Canvas.Top="516" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="123-01-MA1" Canvas.Left="1273" Canvas.Top="56"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="110-23-CV1" Canvas.Left="256" Canvas.Top="415"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="110-41-LT1" Canvas.Left="327" Canvas.Top="671"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="113-01-MA1" Canvas.Left="95" Canvas.Top="773"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="113-01-MA1" Canvas.Left="87" Canvas.Top="774"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="117-01-MA1" Canvas.Left="469" Canvas.Top="774"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="100-01-MA1" Canvas.Left="714" Canvas.Top="81"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="106-01-MA1" Canvas.Left="966" Canvas.Top="496"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="106-01-MA1" Canvas.Left="984" Canvas.Top="499"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="120-01-MA1" Canvas.Left="984" Canvas.Top="256"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="127-01-MA1" Canvas.Left="1186" Canvas.Top="625" />
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="121-01-MA1" Canvas.Left="1079" Canvas.Top="56"/>
@@ -246,18 +244,19 @@
         <Labels:DeviceLabel ComponentName="110-71-ES1" Canvas.Left="256" Canvas.Top="281" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="110-71-ES3" Canvas.Left="372" Canvas.Top="281" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="100-41-LT1" Canvas.Left="563" Canvas.Top="14" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="109-01-MA1" Canvas.Left="860" Canvas.Top="654" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="104-01-MA1" Canvas.Left="532" Canvas.Top="383"/>
-        <Labels:DeviceLabel ComponentName="103-01-MA1" Canvas.Left="684" Canvas.Top="404" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="109-01-MA1" Canvas.Left="823" Canvas.Top="643" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="104-01-MA1" Canvas.Left="532" Canvas.Top="383"/>
+        <Labels:DeviceLabel ComponentName="103-01-MA1" Canvas.Left="823" Canvas.Top="353" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="117-44-FT1" Canvas.Left="578" Canvas.Top="774" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="113-44-FT1" Canvas.Left="87" Canvas.Top="650" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="110-44-FT1" Canvas.Left="427" Canvas.Top="516" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="126-01-MA1" Canvas.Left="1317" Canvas.Top="502" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="117-01-MA1" JumpToLabel="071-01-MA1" Canvas.Left="699" Canvas.Top="701" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="100-31-CV1" Canvas.Left="823" Canvas.Top="81" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="126-01-MA1" JumpToLabel="184-01-MA1" Canvas.Left="1435" Canvas.Top="318" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
+        <Labels:JumpLabel JumpFromLabel="126-01-MA1" JumpToLabel="184-01-MA1" Canvas.Left="1450" Canvas.Top="318" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
         <Labels:JumpLabel JumpFromLabel="123-01-MA1" JumpToLabel="039-01-MA1" Canvas.Left="1387" Canvas.Top="101" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="110-01-MA1" Canvas.Left="220" Canvas.Top="576" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_DSCW_SandClassifier Canvas.Left="690" Canvas.Top="408" Height="116" Width="188" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
     </Canvas>
 </UserControl>
