--- a/Prevu.Synoptics.V6815_Enviroo/Pages/P288.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Pages/P288.xaml
@@ -59,13 +59,6 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="110" StatusComponent="286-01-MA1" Canvas.Left="291" Canvas.Top="558"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="83" StatusComponent="286-21-CV2" RenderTransformOrigin="0.5,0.5" Canvas.Left="501" Canvas.Top="595"/>
-        <Labels:Pipe Width="194" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="213" Canvas.Top="403" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe Color="ByProduct" Width="84" StatusComponent="286-01-MA1" Canvas.Left="251" Canvas.Top="598" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -76,14 +69,13 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="144" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="188" Canvas.Top="568" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="316" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="119" Canvas.Top="481" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="ByProduct" Width="54" StatusComponent="283-01-MA1" Canvas.Left="258" Canvas.Top="498" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="75" StatusComponent="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="503" Canvas.Top="564"/>
         <Labels:Pipe Color="Water" Width="95" StatusComponent="288-23-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="930" Canvas.Top="380" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -99,7 +91,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="168" RenderTransformOrigin="0.5,0.5" StatusComponent="283-01-MA1" Canvas.Left="335" Canvas.Top="465">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="202" RenderTransformOrigin="0.5,0.5" StatusComponent="283-01-MA1" Canvas.Left="318" Canvas.Top="448">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -129,13 +121,6 @@
             </Machines:External.RenderTransform>
         </Machines:External>
         <Machines:V01_RTF_Microfilter Canvas.Left="388" Canvas.Top="495" Height="130" Width="144" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_SCW_Screw_wHopper Canvas.Left="289" Canvas.Top="257" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="182" Height="174">
-            <Machines:V01_SCW_Screw_wHopper.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                </TransformGroup>
-            </Machines:V01_SCW_Screw_wHopper.RenderTransform>
-        </Machines:V01_SCW_Screw_wHopper>
         <Machines:V01_DCT_Decanter Canvas.Left="840" Canvas.Top="415" Height="360" Width="224" ComponentName="288-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="438" Canvas.Top="761" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="154" Canvas.Top="633" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -164,7 +149,7 @@
         <Labels:JumpLabel JumpFromLabel="291-01-MA1" JumpToLabel="229-01-MA1" Canvas.Left="1354" Canvas.Top="422" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="236-01-MA1" Canvas.Left="233" Canvas.Top="74" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="286-VIEW" DetailsPageName="D286" Canvas.Left="504" Canvas.Top="586" HideComponentName="True" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="283-01-MA1" Canvas.Left="267" Canvas.Top="200"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="283-01-MA1" Canvas.Left="233" Canvas.Top="229"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="297-01-MA1" Canvas.Left="1129" Canvas.Top="712"/>
         <Labels:DeviceLabel ComponentName="285-01-MA1" Canvas.Left="335" Canvas.Top="758" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="292-01-MA1" Canvas.Left="1129" Canvas.Top="561" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -179,5 +164,15 @@
         <Labels:DeviceLabel ComponentName="291-44-FT1" Canvas.Left="1249" Canvas.Top="379" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="288-23-CV1" Canvas.Left="1000" Canvas.Top="298" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="433-01-MA1" Canvas.Left="514" Canvas.Top="74" Direction="Left" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_DSCW_SandClassifier Canvas.Left="267" Canvas.Top="262" Height="167" Width="199" HorizontalAlignment="Center" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Top">
+            <Machines:V01_DSCW_SandClassifier.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:V01_DSCW_SandClassifier.RenderTransform>
+        </Machines:V01_DSCW_SandClassifier>
     </Canvas>
 </UserControl>
