--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/OverallView.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/OverallView.xaml
@@ -16,7 +16,7 @@
   <Canvas Height="5432" Width="9936">
     <Labels:Pipe Width="114" StatusComponent="293-01-MA1" Canvas.Left="2334" Canvas.Top="1098" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="746" StatusComponent="514-01-MA1" PipeHeight="Medium" Canvas.Left="8040" Canvas.Top="2505" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="250" StatusComponent="457-01-MA1" Canvas.Left="6320" Canvas.Top="3042" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="246" StatusComponent="457-01-MA1" Canvas.Left="6322" Canvas.Top="3044" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -133,11 +133,11 @@
     </Labels:Pipe>
     <Labels:Pipe Width="176" StatusComponent="293-01-MA1" Canvas.Left="2464" Canvas.Top="1098" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="75" StatusComponent="477-01-MA1" Canvas.Left="6885" Canvas.Top="2071" Color="Water" VisibilityComponent="477-22-CV1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="298" RenderTransformOrigin="0.5,0.5" StatusComponent="120-71-ECS2" Canvas.Left="3240" Canvas.Top="1033" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:Pipe Width="316" RenderTransformOrigin="0.5,0.5" StatusComponent="120-71-ECS2" Canvas.Left="3222" Canvas.Top="1033" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:Pipe Width="243" RenderTransformOrigin="0.5,0.5" StatusComponent="098-01-ECS2" Canvas.Left="3960" Canvas.Top="1033" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:Pipe Width="103" StatusComponent="455-01-MA1" PipeHeight="Medium" Canvas.Left="9683" Canvas.Top="3040" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:Pipe Width="103" StatusComponent="455-01-MA1" PipeHeight="Medium" Canvas.Left="8233" Canvas.Top="3040" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="96" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="5013" Canvas.Top="1178" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:Pipe Width="96" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="5013" Canvas.Top="1172" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Center" />
     <Labels:Pipe Width="590" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="4809" Canvas.Top="1468" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -145,7 +145,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="96" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" Canvas.Left="5769" Canvas.Top="1175" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:Pipe Width="96" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" Canvas.Left="5769" Canvas.Top="1172" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:Pipe Width="630" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" Canvas.Left="5545" Canvas.Top="1486" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -198,7 +198,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="686" StatusComponent="457-01-MA1" Canvas.Left="6102" Canvas.Top="2556" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Center">
+    <Labels:Pipe Width="690" StatusComponent="457-01-MA1" Canvas.Left="6100" Canvas.Top="2558" RenderTransformOrigin="0.5,0.5" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
@@ -259,7 +259,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="110" StatusComponent="456-01-MA1" PipeHeight="Medium" Canvas.Left="6384" Canvas.Top="2905" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="110" StatusComponent="456-01-MA1" PipeHeight="Medium" Canvas.Left="6384" Canvas.Top="2909" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="167" StatusComponent="456-01-MA1" PipeHeight="Medium" Canvas.Left="6484" Canvas.Top="2343" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="570" StatusComponent="456-01-MA1" PipeHeight="Medium" Canvas.Left="6204" Canvas.Top="2624" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
       <Labels:Pipe.RenderTransform>
@@ -501,7 +501,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="2077" StatusComponent="293-01-MA1" Canvas.Left="5624" Canvas.Top="346" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="2077" StatusComponent="291-01-MA1" Canvas.Left="5624" Canvas.Top="346" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="218" StatusComponent="291-01-MA1" Canvas.Left="5517" Canvas.Top="453" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -586,7 +586,7 @@
     <local:P288 CacheMode="BitmapCache" Canvas.Left="6206" Canvas.Top="374" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
     <local:P330 CacheMode="BitmapCache" Canvas.Left="1741" Canvas.Top="1966" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
     <local:P350 CacheMode="BitmapCache" Canvas.Left="3451" Canvas.Top="2331" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-    <local:P430 Canvas.Left="4879" Canvas.Top="2573" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+    <local:P430 CacheMode="BitmapCache" Canvas.Left="4861" Canvas.Top="2577" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
     <local:P443 CacheMode="BitmapCache" Canvas.Left="6107" Canvas.Top="3043" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
     <local:P460 CacheMode="BitmapCache" Canvas.Left="6538" Canvas.Top="2234" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
     <local:P530 CacheMode="BitmapCache" Canvas.Left="8213" Canvas.Top="2316" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
