--- a/Prevu.Synoptics.V6120_Novatex/Pages/P350.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P350.xaml
@@ -176,10 +176,9 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="283" StatusComponent="373-01-MA1" Canvas.Left="157" Canvas.Top="500"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="179" StatusComponent="373-01-MA1" Canvas.Left="157" Canvas.Top="500" VisibilityComponent="354-31-CV1" VisibilitySignal="LS-CLOSED"/>
     <Rectangle HorizontalAlignment="Left" Height="34" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="970" Canvas.Top="630"/>
     <Ellipse HorizontalAlignment="Left" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Center" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="964" Canvas.Top="654"/>
-    <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="434" Canvas.Top="478"/>
     <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="1055" Canvas.Top="636"/>
     <Machines:EXC_HeatExchanger HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="50" Height="70" Canvas.Left="308" Canvas.Top="597">
       <Machines:EXC_HeatExchanger.RenderTransform>
@@ -276,5 +275,7 @@
     <Labels:DeviceLabel ComponentName="387-01-MA1" Canvas.Left="886" Canvas.Top="375" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="386-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1095" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="398-01-MA1" Canvas.Left="1361" Canvas.Top="494" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:Pipe Color="Water" Width="118" StatusComponent="373-01-MA1" Canvas.Left="331" Canvas.Top="500" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="434" Canvas.Top="478"/>
   </Canvas>
 </UserControl>
